# esperanto-anime-dubber

./: .gitignore  README.md  README_eo.md  install.ps1  pyproject.toml  requirements.txt  usage.txt  usage_eo.txt
anidub/: __init__.py  __main__.py  asr.py  ass.py  assembler.py  characters.py  cli.py  config.py  decompose.py  esperanto.py  extract.py  full_episode.py  pipeline.py  playback.py  project.py  separator.py  test_voice.py  transcribe.py  translate.py
anidub/gui/: server.py
anidub/gui/static/: app.js  style.css
anidub/gui/static/i18n/: en.json  eo.json
anidub/gui/templates/: index.html
anidub/tts/: __init__.py  omnivoice.py  qwen3.py
anime/oreimo/: Oreimo - 01.ass
test_output/: line_6.json  skipped.json
tools/: translate_ui.py
