[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "anidub"
version = "0.2.0"
description = "Anime dubbing: AI voice generation with Esperanto TTS"
requires-python = ">=3.10"

[project.scripts]
anidub = "anidub.cli:main"
anidub-test-voice = "anidub.test_voice:main"
anidub-translate = "anidub.translate:main"

[tool.setuptools.packages.find]
include = ["anidub*"]